modified description of 409 response for POST /perturb

--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -266,7 +266,7 @@ paths:
             $ref: '#/definitions/Error'
         '409':
           description: >-
-            System is not in a state where it can be perturbed.
+            The SUT has already been perturbed.
           schema:
             type: object
             $ref: '#/definitions/Error'
