fixed bad type in TH

--- a/documents/swagger-yaml/cp2-th.yaml
+++ b/documents/swagger-yaml/cp2-th.yaml
@@ -144,7 +144,7 @@ paths:
               - pareto-set
             properties:
               adaptation:
-                type: Object
+                type: object
                 $ref: '#/definitions/CandidateAdaptation'
                 description: The candidate adaptation that was added to the
                   Pareto set.
