added NoSearchLimits to Error enum

--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -43,6 +43,7 @@ definitions:
               - FileNotFound
               - LineNotFound
               - OperatorNotFound
+              - NoSearchLimits
             example: NeutralPerturbation
             description: The kind of error that occurred.
           message:
