updated CP2 TH and TA to use shared definitions document

--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -237,7 +237,7 @@ paths:
               pareto-set:
                 type: array
                 items:
-                  $ref: './cp2-th.yaml#/definitions/CandidateAdaptation'
+                  $ref: './cp2-definitions.yaml#/definitions/CandidateAdaptation'
                 description: >-
                   A list containing details of the sub-set of adaptations that
                   have been encountered that belong to the
