--- a/documents/swagger-yaml/cp2-definitions.yaml
+++ b/documents/swagger-yaml/cp2-definitions.yaml
@@ -62,3 +62,112 @@ definitions:
         description: >-
           A flag indicating whether the compilation of this adaptation was
           successful or not.
+
+  Error:
+    type: object
+    required:
+      - error
+    properties:
+      error:
+        type: object
+        required:
+          - kind
+          - message
+        properties:
+          kind:
+            type: string
+            enum:
+              - NeutralPerturbation
+              - FailedToComputeCoverage
+              - NotReadyToPerturb
+              - NotReadyToAdapt
+              - FileNotFound
+              - LineNotFound
+              - OperatorNotFound
+              - NoSearchLimits
+            example: NeutralPerturbation
+            description: The kind of error that occurred.
+          message:
+            type: string
+            example: "invalid perturbation: no test failures."
+            description: >-
+                Human-readable information about the error, if any can be
+                provided.
+
+  SourceLocation:
+    type: object
+    required:
+      - file
+      - offset
+    properties:
+      file:
+        type: string
+        description: >-
+          The file at which this source location resides.
+      offset:
+        type: integer
+        minimum: 0
+        description: >-
+          The character offset between the start of the file and this location.
+
+  SourceLine:
+    type: object
+    required:
+      - file
+      - number
+    properties:
+      file:
+        type: string
+        description: >-
+          The file to which this line belongs.
+      number:
+        type: integer
+        minimum: 1
+        description: >-
+          The one-indexed number of this line in the file.
+
+  SourceRange:
+    type: object
+    required:
+      - start
+      - stop
+    properties:
+      start:
+        $ref: '#/definitions/SourceLocation'
+        description: >-
+          The location that marks the start of this source range.
+      stop:
+        $ref: '#/definitions/SourceLocation'
+        description: >-
+          The location that marks the end of this source range.
+
+  PerturbationKind:
+    type: string
+    enum:
+      - delete-void-function-call
+      - flip-arithmetic-operator
+      - flip-boolean-operator
+      - flip-relational-operator
+      - undo-transformation
+      - delete-conditional-control-flow
+      - flip-signedness
+    description: >-
+      A description of the kind of the perturbation.
+
+  Perturbation:
+    type: object
+    required:
+      - kind
+      - at
+    properties:
+      kind:
+        $ref: '#/definitions/PerturbationKind'
+      at:
+        $ref: '#/definitions/SourceRange'
+        description: >-
+          The range of code that is deleted or replaced by the perturbation.
+      replacement:
+        type: string
+        description: >-
+          The body of the source code that should replaced the source code
+          given by the location range associated with this perturbation.
