--- a/cp2/ta/Dockerfile
+++ b/cp2/ta/Dockerfile
@@ -1,18 +1,18 @@
 FROM cmu-mars/orchestrator
 
-RUN sudo apt-get install -y python3 python3-pip
+# RUN sudo apt-get install -y python3 python3-pip
 
-RUN sudo mkdir -p /usr/src/app
-RUN sudo chown mars /usr/src/app
+RUN mkdir -p /usr/src/app
+# RUN sudo chown mars /usr/src/app
 WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
 
-RUN sudo pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
 
-RUN sudo chown -R mars /usr/src/app
+# RUN sudo chown -R mars /usr/src/app
 
 ENV PYTHONUNBUFFERED 0
 
