--- a/cp2/ta/docker-compose.yml
+++ b/cp2/ta/docker-compose.yml
@@ -23,4 +23,4 @@ services:
       - cp2_th
     expose:
       - 5000
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://cp2_th:${TH_PORT}"
+    command: sh -c "cd /usr/src/app && python3 -u -m swagger_server http://cp2_th:${TH_PORT}"
