added UnexpectedError to CP2 definitions

--- a/documents/swagger-yaml/cp2-definitions.yaml
+++ b/documents/swagger-yaml/cp2-definitions.yaml
@@ -84,6 +84,7 @@ definitions:
               - LineNotFound
               - OperatorNotFound
               - NoSearchLimits
+              - UnexpectedError
             example: NeutralPerturbation
             description: The kind of error that occurred.
           message:
