--- a/cp3/ta/docker-compose.yml
+++ b/cp3/ta/docker-compose.yml
@@ -37,4 +37,4 @@ services:
       - cp3_th
     expose:
       - 5000
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://cp3_th:${TH_PORT}"
+    command: bash -c ". ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -u -m swagger_server http://cp3_th:${TH_PORT}"
