--- a/cp3/ta/docker-compose-no-th.yml
+++ b/cp3/ta/docker-compose-no-th.yml
@@ -10,7 +10,7 @@
 #       container to the wider internal network (i.e., not the host machine).
 #       Ports may be forwarded to the host network using the "ports" command.
 #
-version: '2'
+version: '3'
 services:
   cp3_ta:
     image: cmu-mars/cp3
@@ -18,10 +18,11 @@ services:
     hostname: cp3_ta
     environment:
       - "ROS_HOSTNAME=cp3_ta"
-      - "ROS_MASTER_URI=http://roscore:11311"
       - "TA_PORT=${TA_PORT}"
     ports:
       - ${TA_PORT}:5000
+      - 1100:1100
     expose:
       - 5000
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://${TH_HOST}:${TH_PORT}"
+      - 1100
+    command: bash -c ". ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready.json"
