--- a/cp2/ta/Dockerfile
+++ b/cp2/ta/Dockerfile
@@ -1,9 +1,10 @@
 FROM cmu-mars/orchestrator
 
-# RUN sudo apt-get install -y python3 python3-pip
+# we add a custom entrypoint script to allow us to access the host
+COPY entrypoint.sh /usr/bin/
+ENTRYPOINT ["/usr/bin/entrypoint.sh"]
 
 RUN mkdir -p /usr/src/app
-# RUN sudo chown mars /usr/src/app
 WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
@@ -12,10 +13,6 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
 
-# RUN sudo chown -R mars /usr/src/app
-
 ENV PYTHONUNBUFFERED 0
-
-EXPOSE 8080
 
 CMD ["python3", "-m", "swagger_server"]
