--- a/cp3/ta/docker-compose-no-th.yml
+++ b/cp3/ta/docker-compose-no-th.yml
@@ -18,11 +18,10 @@ services:
     hostname: cp3_ta
     environment:
       - "ROS_HOSTNAME=cp3_ta"
+      - "ROS_MASTER_URI=http://cp3_ta:11311"
       - "TA_PORT=${TA_PORT}"
     ports:
       - ${TA_PORT}:5000
-      - 1100:1100
     expose:
       - 5000
-      - 1100
     command: bash -c ". ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready.json"
