--- a/rainbow-p2/Dockerfile-cp1
+++ b/rainbow-p2/Dockerfile-cp1
@@ -1,6 +1,6 @@
 # Docker file for Rainbow installation
 
-FROM cmu-mars/cp1_controllers
+FROM cmu-mars/cp1_base
 
 # Install Java
 # ## per https://bugs.launchpad.net/ubuntu/+source/ca-certificates-java/+bug/1396760
