Moved python and pip insallation to mars-main

--- a/mars-main-p2/Dockerfile
+++ b/mars-main-p2/Dockerfile
@@ -16,6 +16,10 @@ RUN chmod 640 /etc/sudoers.d/llproxy
 USER mars
 WORKDIR /home/mars
 
+# Hack to put python psutils path in for python 2, which ROS is running
+RUN sudo apt-get install -y python-pip
+RUN sudo pip install psutil watchdog
+
 RUN git config --global url.https://github.com/.insteadOf git://github.com/
 
 # create an empty catkin workspace
