--- a/rainbow-p2/Dockerfile-cp3
+++ b/rainbow-p2/Dockerfile-cp3
@@ -43,6 +43,10 @@ RUN wget http://acme.able.cs.cmu.edu/public/BRASS/p2/rainbow-brass-RR2.tgz && \
 RUN sudo chown -R mars /home/mars/das
 
 RUN find . -name ".sh" -exec chmod +x {} \;
+
+# This is where the backup plan for setting the instruction graphs puts
+# the new instruction graphs
+RUN mkdir ~/instuctions
    
 CMD ["/bin/bash"]
     
