--- a/documents/swagger-yaml/cp1-th.yaml
+++ b/documents/swagger-yaml/cp1-th.yaml
@@ -9,8 +9,8 @@ paths:
   /ready:
     post:
       description: >-
-        indicate to the TH that the TA is ready to recieve configuration
-        data to continue starting up the DAS
+        indicate to the TH that the TA is ready to recieve configuration data to
+        continue starting up the DAS
       responses:
         '200':
           description: TH is ready to produce configuration data
@@ -22,7 +22,7 @@ paths:
               - target-locs
             properties:
               level:
-                description: |-
+                description: >-
                   the level at which the DAS should operate for this test.
                   as given in the CP definition,
 
@@ -40,29 +40,29 @@ paths:
               start-loc:
                 type: string
                 description: >-
-                  the name of the start map waypoint. start-loc must not be
-                  the same as the first item of `target-locs`.
+                  the name of the start map waypoint. start-loc must not be the
+                  same as the first item of `target-locs`.
               target-locs:
                 type: array
                 items:
                   type: string
                 description: >-
-                  the names of the waypoints to visit, in the order in
-                  which they must be visited. each name must be a valid
-                  name of a waypoint on the map. `target-locs` must not be
-                  the empty list.  every adjacent pair of elements of
-                  `target-locs` must be disequal -- that is to say, it is
-                  not permitted to direct the robot to travel to the
-                  waypoint where it is already located.
+                  the names of the waypoints to visit, in the order in which
+                  they must be visited. each name must be a valid name of a
+                  waypoint on the map. `target-locs` must not be the empty
+                  list.  every adjacent pair of elements of `target-locs` must
+                  be disequal -- that is to say, it is not permitted to direct
+                  the robot to travel to the waypoint where it is already
+                  located.
               power-model:
                 type: integer
                 minimum: 0
                 maximum: 99
                 description: >-
-                  if in level c, the name of the power model from the test
-                  data to use for this test. each power model includes at
-                  least a function describing how the battery charges,
-                  discharges, and a maximum possible charge.
+                  if in level c, the name of the power model from the test data
+                  to use for this test. each power model includes at least a
+                  function describing how the battery charges, discharges, and a
+                  maximum possible charge.
               discharge-budget:
                 type: integer
                 minimum: 2
@@ -75,19 +75,20 @@ paths:
   /error:
     post:
       description: >-
-        used by the TA to indicate to the TH that a non-recoverable error
-        has occurred and the test cannot proceed. the TH will terminate the
-        test upon notification of an error.
+        used by the TA to indicate to the TH that a non-recoverable error has
+        occurred and the test cannot proceed. the TH will terminate the test
+        upon notification of an error.
       parameters:
         - in: body
           name: errorparams
+          required: true
           schema:
             type: object
             required:
               - error
             properties:
               error:
-                description: |-
+                description: >-
                   one of a enumerated set of reasons that errors may arise
 
                    * parsing-error - one or more of the function
@@ -104,20 +105,18 @@ paths:
                   - learning-error
                   - other-error
               message:
-                description: >-
-                  human readable text describing the error, if available
+                description: 'human readable text describing the error, if available'
                 type: string
       responses:
         '200':
-          description: >-
-            TH acknowledges the error and is shutting down the test
+          description: TH acknowledges the error and is shutting down the test
   /status:
     post:
-      description: >-
-        used by the TA to periodically indicate its current state to the TH
+      description: used by the TA to periodically indicate its current state to the TH
       parameters:
         - in: body
           name: statusparams
+          required: true
           schema:
             type: object
             required:
@@ -168,8 +167,8 @@ paths:
                 format: float
               charge:
                 description: >-
-                  current turtlebot battery charge in mWh. cannot be more
-                  than the maximum specified in the response from `/ready`.
+                  current turtlebot battery charge in mWh. cannot be more than
+                  the maximum specified in the response from `/ready`.
                 type: integer
                 minimum: 0
               sim-time:
@@ -188,12 +187,13 @@ paths:
       description: >-
         used by the TA to indicate to the TH that the test is over.
 
-        turtlebot has reached the goal and that the mission has been
-        completed.  note that incomplete missions will result in an error
-        and not use this end point.
+        turtlebot has reached the goal and that the mission has been completed. 
+        note that incomplete missions will result in an error and not use this
+        end point.
       parameters:
         - in: body
           name: doneparams
+          required: true
           schema:
             type: object
             required:
@@ -214,8 +214,8 @@ paths:
                 format: float
               charge:
                 description: >-
-                  final charge measure of the turtlebot. cannot be more
-                  than the maximum specified in the response from `/ready`.
+                  final charge measure of the turtlebot. cannot be more than the
+                  maximum specified in the response from `/ready`.
                 type: integer
                 minimum: 0
               sim-time:
@@ -229,14 +229,14 @@ paths:
                   properties:
                     x:
                       description: >-
-                        the x-coordinate of the robot when it reached this
-                        way point
+                        the x-coordinate of the robot when it reached this way
+                        point
                       type: number
                       format: float
                     'y':
                       description: >-
-                        the y-coordinate of the robot when it reached this
-                        way point
+                        the y-coordinate of the robot when it reached this way
+                        point
                       type: number
                       format: float
                     sim-time:
@@ -246,22 +246,21 @@ paths:
                       type: integer
                     name:
                       description: >-
-                        the name of the way point reached (TODO -- this
-                        will become an enum when we know all the names of
-                        the way points)
+                        the name of the way point reached (TODO -- this will
+                        become an enum when we know all the names of the way
+                        points)
                       type: string
                 description: >-
-                  the names of the waypoints that the turtlebot visited in
-                  the order that it visited them as well as the x,y
-                  coordinates of the robot and simulation time that it
-                  arrived there
+                  the names of the waypoints that the turtlebot visited in the
+                  order that it visited them as well as the x,y coordinates of
+                  the robot and simulation time that it arrived there
               outcome:
                 type: string
                 enum:
                   - at-goal
                   - out-of-battery
                   - other-outcome
-                description: |-
+                description: >-
                   indicates the reason why the test is over
 
                     * at-goal - the turtlebot has reached the goal and
