--- a/cp1/ta/docker-compose-no-th.yml
+++ b/cp1/ta/docker-compose-no-th.yml
@@ -13,14 +13,6 @@
       # - "TH_PORT=`echo ${TH_URI} | awk -F ':' '{print $NF}'`"
 version: '2'
 services:
-  roscore:
-    image: ros:kinetic
-    container_name: roscore
-    hostname: roscore
-    expose:
-      - 11311
-    command: roscore
-
   cp1_ta:
     image: cmu-mars/cp1
     container_name: cp1_ta
@@ -31,8 +23,6 @@ services:
       - "TA_PORT=${TA_PORT}"
     ports:
       - ${TA_PORT}:5000
-    depends_on:
-      - roscore
     expose:
       - 5000
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://${TH_HOST}:${TH_PORT}"
+    command: bash -c "cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready.json"
